--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@ body {
   background-color: #011F3F;
 }
 
+footer {
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 5%;
+}
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
